--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/NateRolo/2537_assignment_1/issues"
   },
-  "homepage": "https://github.com/NateRolo/2537_assignment_1#readme"
+  "homepage": "https://github.com/NateRolo/2537_assignment_1#readme",
+  "dependencies": {
+    "dotenv": "^16.5.0"
+  }
 }
