--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
-    "mongodb": "^6.16.0"
+    "mongodb": "^6.16.0",
+    "path": "^0.12.7"
   }
 }
