--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "fs": "^0.0.1-security",
     "joi": "^17.13.3",
     "mongodb": "^6.16.0",
     "path": "^0.12.7"
